# RayTracing

./: .gitignore  CMakeLists.txt  README.md  convert.py  run.sh
include/: box.h  curve.hpp  group.hpp  hit.h  material.hpp  mesh.hpp  moving.h  object3d.hpp  plane.hpp  ray.hpp  revsurface.hpp  sphere.hpp  texture.h  triangle.hpp  vector.h
src/: main.cpp  mesh.cpp
